{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 185,
  "lineage": "2282f310-ffc0-9716-2b44-0b5cb329db3d",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "jenkins",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/bf866c57-4815-4822-9177-86c880a71122/resourceGroups/Test-resources/providers/Microsoft.Network/networkInterfaces/Test-nic-jenkins",
            "ip_configuration": [
              {
                "name": "testconfiguration1",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/bf866c57-4815-4822-9177-86c880a71122/resourceGroups/Test-resources/providers/Microsoft.Network/publicIPAddresses/Test-publicip-jenkins",
                "subnet_id": "/subscriptions/bf866c57-4815-4822-9177-86c880a71122/resourceGroups/Test-resources/providers/Microsoft.Network/virtualNetworks/Test-network/subnets/internal"
              }
            ],
            "location": "uksouth",
            "name": "Test-nic-jenkins",
            "network_security_group_id": "/subscriptions/bf866c57-4815-4822-9177-86c880a71122/resourceGroups/Test-resources/providers/Microsoft.Network/networkSecurityGroups/Test-nsg-jenkins",
            "private_ip_address": "10.0.2.6",
            "private_ip_addresses": [
              "10.0.2.6"
            ],
            "resource_group_name": "Test-resources"
          },
          "depends_on": [
            "azurerm_network_security_group.jenkins",
            "azurerm_public_ip.jenkins",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "jenkins_build",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/bf866c57-4815-4822-9177-86c880a71122/resourceGroups/Test-resources/providers/Microsoft.Network/networkInterfaces/Test-nic-jenkins-build",
            "ip_configuration": [
              {
                "name": "testconfiguration1",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/bf866c57-4815-4822-9177-86c880a71122/resourceGroups/Test-resources/providers/Microsoft.Network/publicIPAddresses/Test-publicip-jenkins-build",
                "subnet_id": "/subscriptions/bf866c57-4815-4822-9177-86c880a71122/resourceGroups/Test-resources/providers/Microsoft.Network/virtualNetworks/Test-network/subnets/internal"
              }
            ],
            "location": "uksouth",
            "name": "Test-nic-jenkins-build",
            "network_security_group_id": "/subscriptions/bf866c57-4815-4822-9177-86c880a71122/resourceGroups/Test-resources/providers/Microsoft.Network/networkSecurityGroups/Test-nsg-jenkins-build",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "Test-resources"
          },
          "depends_on": [
            "azurerm_network_security_group.jenkins_build",
            "azurerm_public_ip.jenkins_build",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "python_server",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/bf866c57-4815-4822-9177-86c880a71122/resourceGroups/Test-resources/providers/Microsoft.Network/networkInterfaces/Test-nic-python-server",
            "ip_configuration": [
              {
                "name": "testconfiguration1",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/bf866c57-4815-4822-9177-86c880a71122/resourceGroups/Test-resources/providers/Microsoft.Network/publicIPAddresses/Test-publicip-python-server",
                "subnet_id": "/subscriptions/bf866c57-4815-4822-9177-86c880a71122/resourceGroups/Test-resources/providers/Microsoft.Network/virtualNetworks/Test-network/subnets/internal"
              }
            ],
            "location": "uksouth",
            "name": "Test-nic-python-server",
            "network_security_group_id": "/subscriptions/bf866c57-4815-4822-9177-86c880a71122/resourceGroups/Test-resources/providers/Microsoft.Network/networkSecurityGroups/Test-nsg-python-server",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "Test-resources"
          },
          "depends_on": [
            "azurerm_network_security_group.python_server",
            "azurerm_public_ip.python_server",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "jenkins",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bf866c57-4815-4822-9177-86c880a71122/resourceGroups/Test-resources/providers/Microsoft.Network/networkSecurityGroups/Test-nsg-jenkins",
            "location": "uksouth",
            "name": "Test-nsg-jenkins",
            "resource_group_name": "Test-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 400,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Jenkins-Server",
                "priority": 500,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "jenkins_build",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bf866c57-4815-4822-9177-86c880a71122/resourceGroups/Test-resources/providers/Microsoft.Network/networkSecurityGroups/Test-nsg-jenkins-build",
            "location": "uksouth",
            "name": "Test-nsg-jenkins-build",
            "resource_group_name": "Test-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 400,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Jenkins-Server",
                "priority": 500,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "python_server",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bf866c57-4815-4822-9177-86c880a71122/resourceGroups/Test-resources/providers/Microsoft.Network/networkSecurityGroups/Test-nsg-python-server",
            "location": "uksouth",
            "name": "Test-nsg-python-server",
            "resource_group_name": "Test-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 400,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Python-Server",
                "priority": 500,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "jenkins",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "jenkins-280619130253",
            "fqdn": "jenkins-280619130253.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/bf866c57-4815-4822-9177-86c880a71122/resourceGroups/Test-resources/providers/Microsoft.Network/publicIPAddresses/Test-publicip-jenkins",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "Test-publicip-jenkins",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "Test-resources",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "jenkins_build",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "jenkins-build-280619130253",
            "fqdn": "jenkins-build-280619130253.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/bf866c57-4815-4822-9177-86c880a71122/resourceGroups/Test-resources/providers/Microsoft.Network/publicIPAddresses/Test-publicip-jenkins-build",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "Test-publicip-jenkins-build",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "Test-resources",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "python_server",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "python-280619130253",
            "fqdn": "python-280619130253.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/bf866c57-4815-4822-9177-86c880a71122/resourceGroups/Test-resources/providers/Microsoft.Network/publicIPAddresses/Test-publicip-python-server",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "Test-publicip-python-server",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "Test-resources",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "internal",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "id": "/subscriptions/bf866c57-4815-4822-9177-86c880a71122/resourceGroups/Test-resources/providers/Microsoft.Network/virtualNetworks/Test-network/subnets/internal",
            "name": "internal",
            "resource_group_name": "Test-resources",
            "virtual_network_name": "Test-network"
          },
          "depends_on": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "id": "/subscriptions/bf866c57-4815-4822-9177-86c880a71122/resourceGroups/Test-resources/providers/Microsoft.Network/virtualNetworks/Test-network",
            "location": "uksouth",
            "name": "Test-network",
            "resource_group_name": "Test-resources"
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}